2010-10-12  Mark Rowe  <mrowe@apple.com>

        Fix class vs struct forward declaration issues in WebKit2 observed when using clang.

        * Scripts/webkit2/messages.py: Add WebCore::ViewportArguments to the set of structs.
        * UIProcess/PageClient.h:
        * UIProcess/WebPageProxy.h:

2010-10-12  Juha Savolainen  <juha.savolainen@weego.fi>

        Reviewed by Antti Koivisto.

        [Qt] Adding Qt WebKit2 API for zooming.
        https://bugs.webkit.org/show_bug.cgi?id=47539

        Adding zoom methods to QWKPage.
        
        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::textZoomFactor): Added
        (QWKPage::setTextZoomFactor): Added
        (QWKPage::pageZoomFactor): Added
        (QWKPage::setPageZoomFactor): Added
        (QWKPage::setPageAndTextZoomFactors): Added
        * UIProcess/API/qt/qwkpage.h:

2010-10-11  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler of the past.

        Address some of Darin's review feedback in https://bugs.webkit.org/show_bug.cgi?id=47354
        that wasn't left till after my original commit.

        * UIProcess/API/C/WKPage.cpp:
        (WKPageCopySessionState): Nuke the temporary variable.
        * UIProcess/API/C/WKPage.h:

        * UIProcess/WebPageProxy.h: Fix up function declarations.
        
        * UIProcess/cf/WebPageProxyCF.cpp:
        (WebKit::WebPageProxy::sessionStateData): Use sizeof(UInt32) instead of 4.
        (WebKit::WebPageProxy::restoreFromSessionStateData): Ditto.

2010-10-11  Brady Eidson  <beidson@apple.com>

        Reviewed by BUILD FIX.

        Build fix for Windows in https://bugs.webkit.org/show_bug.cgi?id=47354

        * UIProcess/cf/WebPageProxyCF.cpp:
        (WebKit::WebPageProxy::sessionStateData): Change to use CF APIs that exist on Windows.
        (WebKit::WebPageProxy::restoreFromSessionStateData): Ditto.

2010-10-11  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.
