@@ -1,3 +1,11 @@
+2010-10-12  Mark Rowe  <mrowe@apple.com>
+
+        Fix the 32-bit WebKit2 build.
+
+        * MiniBrowser/mac/BrowserWindowController.m:
+        (getWindowFrame): Use NSRect rather than CGRect since that's what -frame returns.
+        (setWindowFrame): Use NSMakeRect rather than CGRectMake since that's what -setFrame:display: expects.
+
 2010-10-11  Tony Chang  <tony@chromium.org>
 
         Reviewed by Adam Barth.
