@@ -1,5 +1,14 @@
 2010-10-12  Mark Rowe  <mrowe@apple.com>
 
+        Fix the 32-bit WebKit2 build.
+
+        * UIProcess/cf/WebBackForwardListCF.cpp:
+        (WebKit::WebBackForwardList::restoreFromCFDictionaryRepresentation): Change currentIndex to be of
+        type CFIndex and specify kCFNumberCFIndexType when calling CFNumberGetValue. This avoids a warning
+        when comparing currentIndex with another variable of type CFIndex later in the function.
+
+2010-10-12  Mark Rowe  <mrowe@apple.com>
+
         Fix class vs struct forward declaration issues in WebKit2 observed when using clang.
 
         * Scripts/webkit2/messages.py: Add WebCore::ViewportArguments to the set of structs.
